Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -616,19 +616,19 @@
                         <div class="row align-items-center gy-5">
                             <div class="col-lg-5 col-md-12 mb-md-40">
                                 <div class="tp-vision-image tp_fade_anim" data-delay=".4">
-                                    <img src="assets/img/9Yards/Videos/9yards-office.jpg" alt="9Yards Team in Action" style="width: 100%; height: 450px; object-fit: cover; border-radius: 12px; box-shadow: 0 10px 40px rgba(0,0,0,0.1);">
+                                    <img src="assets/img/9Yards/Videos/team.jpg" alt="9Yards Team in Action" style="width: 100%; height: 450px; object-fit: cover; border-radius: 12px; box-shadow: 0 10px 40px rgba(0,0,0,0.1);">
                                 </div>
                             </div>
                             <div class="col-lg-7 col-md-12">
                                 <div class="tp-vision-content ps-lg-4">
                                     <div class="tp-service-5-text tp_fade_anim" data-delay=".5">
-                                        <p>We started 9Yards with one belief: Uganda's creative industry deserves to compete on the global stage. Every project we touch, every brand we build, every story we tell, we're raising the bar for what's possible in East Africa.</p>
+                                        <p>We founded 9Yards with one belief: Uganda's creative industry deserves global recognition. Every project we create and every brand we elevate raises the standard for what East Africa can achieve.</p>
                                     </div>
                                     <div class="tp-service-5-text tp_fade_anim" data-delay=".5">
-                                        <p>From our podcast studio in Kampala to film sets across the country, we're building an ecosystem where creativity, quality, and culture unite. We're not just creating content, delivering food, or producing films. We're building platforms that empower Ugandan talent and celebrate our authentic voice.</p>
+                                        <p>From our podcast studio to music video sets across Uganda, we're building an ecosystem where quality, innovation, and culture converge. We don't just create content, we build platforms that empower local talent and amplify authentic voices.</p>
                                     </div>
                                     <div class="tp-service-5-text tp_fade_anim" data-delay=".5">
-                                        <p>This is just the beginning. As we grow across East Africa, we're committed to one thing: delivering international-quality work that stays true to who we are. The future is bright, and we're building it together.</p>
+                                        <p>This is only the beginning. As we expand across the region, our commitment remains the same: delivering world-class excellence that stays true to our roots. The future is bright, and we are building it together, one yard at a time.</p>
                                     </div>
                                     <div class="tp-service-5-btn tp_fade_anim mt-40" data-delay=".6">
                                         <a class="tp-btn-yellow-green" href="careers.html">
