Update HTML attributes for accessibility and improve image alt text for better SEO

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js agntix-light" lang="zxx">
+<html class="no-js agntix-light" lang="en">
 
 <head>
 
@@ -274,7 +274,7 @@
                                     </a>
                                 </div>
                                 <div class="tp-header-bar ml-20 d-xl-none">
-                                    <button class="tp-offcanvas-open-btn">
+                                    <button class="tp-offcanvas-open-btn" aria-label="Open menu">
                                         <i></i>
                                         <i></i>
                                         <i></i>
@@ -480,7 +480,7 @@
                                     </div>
                                     <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4">
                                         <div class="tp-service-thumb text-end">
-                                            <img class="tp_fade_anim" data-fade-from="right" data-delay=".2" src="assets/img/9Yards/Services/9yards-content-house.jpg" alt="">
+                                            <img class="tp_fade_anim" data-fade-from="right" data-delay=".2" src="assets/img/9Yards/Services/9yards-content-house.jpg" alt="9Yards Content House Services">
                                         </div>
                                     </div>
                                 </div>
@@ -499,7 +499,7 @@
                                                 Real Ugandan flavors delivered fresh to your door across Kampala. We bridge the gap between traditional culinary heritage and modern convenience, providing authentic tastes for every occasion.
                                             </p>
                                             <div class="tp-service-btn">
-                                                <a href="https://food.9yards.co.ug" class="tp-btn-yellow-green">
+                                                <a href="https://food.9yards.co.ug" class="tp-btn-yellow-green" target="_blank" rel="noopener noreferrer">
                                                     <span>
                                                         <span class="text-1">Order Now ↗</span>
                                                         <span class="text-2">Order Now ↗</span>
@@ -515,7 +515,7 @@
                                     </div>
                                     <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4">
                                         <div class="tp-service-thumb text-end">
-                                            <img class="tp_fade_anim" data-fade-from="right" data-delay=".2" src="assets/img/9Yards/Services/9yards-food.jpg" alt="">
+                                            <img class="tp_fade_anim" data-fade-from="right" data-delay=".2" src="assets/img/9Yards/Services/9yards-food.jpg" alt="9Yards Food Delivery">
                                         </div>
                                     </div>
                                 </div>
@@ -529,12 +529,12 @@
                                     </div>
                                     <div class="col-xxl-5 col-xl-6 col-lg-7 col-md-7">
                                         <div class="tp-service-content">
-                                            <h4 class="tp-section-title"><a class="tp_text_invert" href="https://film.9yards.co.ug">9YARDS FILMS</a></h4>
+                                            <h4 class="tp-section-title"><a class="tp_text_invert" href="https://film.9yards.co.ug" target="_blank" rel="noopener noreferrer">9YARDS FILMS</a></h4>
                                             <p>
                                                 We produce videos that tell compelling stories, from high-energy music videos to impactful corporate films. Our cinematic approach ensures your message isn't just seen, but felt.
                                             </p>
                                             <div class="tp-service-btn">
-                                                <a href="https://film.9yards.co.ug" class="tp-btn-yellow-green">
+                                                <a href="https://film.9yards.co.ug" class="tp-btn-yellow-green" target="_blank" rel="noopener noreferrer">
                                                     <span>
                                                         <span class="text-1">View Our Work ↗</span>
                                                         <span class="text-2">View Our Work ↗</span>
@@ -550,7 +550,7 @@
                                     </div>
                                     <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4">
                                         <div class="tp-service-thumb text-end">
-                                            <img class="tp_fade_anim" data-fade-from="right" data-delay=".2" src="assets/img/9Yards/Services/9yards-film.jpg" alt="">
+                                            <img class="tp_fade_anim" data-fade-from="right" data-delay=".2" src="assets/img/9Yards/Services/9yards-film.jpg" alt="9Yards Film Production">
                                         </div>
                                     </div>
                                 </div>
@@ -565,7 +565,7 @@
                     <div class="container-fluid p-0">
                         <div class="tp-video-thumb-wrap">
                             <div class="tp-video-thumb d-none d-xl-block">
-                                <img src="assets/img/9Yards/Videos/9yards-office.jpg" alt="">
+                                <img src="assets/img/9Yards/Videos/9yards-office.jpg" alt="9Yards Office">
                             </div>
                             <div class="tp-video-thumb mb-25">
                                 <video loop="" muted="" autoplay="" playsinline="">
@@ -573,16 +573,16 @@
                                 </video>
                             </div>
                             <div class="tp-video-thumb d-none d-xl-block mb-25">
-                                <img src="assets/img/9Yards/Videos/9yards-food-lusaniya.jpg" alt="">
+                                <img src="assets/img/9Yards/Videos/9yards-food-lusaniya.jpg" alt="9Yards Food Lusaniya">
                             </div>
                             <div class="tp-video-thumb d-none d-xl-block mb-25">
-                                <img src="assets/img/9Yards/Videos/9yards-office-2.jpg" alt="">
+                                <img src="assets/img/9Yards/Videos/9yards-office-2.jpg" alt="9Yards Office Interior">
                             </div>
                             <div class="tp-video-thumb d-none d-xl-block">
-                                <img src="assets/img/9Yards/Videos/sitwakalaba.jpg" alt="">
+                                <img src="assets/img/9Yards/Videos/sitwakalaba.jpg" alt="Sitwakalaba Music Video">
                             </div>
                             <div class="tp-video-thumb d-none d-xl-block">
-                                <img src="assets/img/9Yards/Videos/9yards-juice.jpg" alt="">
+                                <img src="assets/img/9Yards/Videos/9yards-juice.jpg" alt="9Yards Fresh Juice">
                             </div>
                         </div>
                     </div>
@@ -659,7 +659,7 @@
                                 <div class="col-xl-4 col-lg-4 col-md-6 mb-40">
                                     <div class="dgm-footer-widget dgm-footer-col-1 z-index-1 tp_fade_anim" data-delay=".3">
                                         <div class="dgm-footer-logo mb-30">
-                                            <a href="index.html"><img data-width="90px" src="assets/img/9Yards/Logos/9Yards/PNG/9-Yards-Logo-white-footer.png" alt=""></a>
+                                            <a href="index.html"><img data-width="90px" src="assets/img/9Yards/Logos/9Yards/PNG/9-Yards-Logo-white-footer.png" alt="9Yards Logo"></a>
                                         </div>
                                         <div class="dgm-footer-widget-paragraph mb-35">
                                             <p>Empowering brands through an integrated ecosystem of cinematic storytelling, digital strategy, and authentic local flavors.</p>
@@ -699,9 +699,9 @@
                                         <h4 class="dgm-footer-widget-title">Companies</h4>
                                         <div class="dgm-footer-widget-menu">
                                             <ul>
-                                                <li><a href="contenthouse.9yards.co.ug">Content House</a></li>
-                                                <li><a href="food.9yards.co.ug">9Yards Food</a></li>
-                                                <li><a href="film.9yards.co.ug">9Yards Film</a></li>
+                                                <li><a href="https://contenthouse.9yards.co.ug" target="_blank" rel="noopener noreferrer">Content House</a></li>
+                                                <li><a href="https://food.9yards.co.ug" target="_blank" rel="noopener noreferrer">9Yards Food</a></li>
+                                                <li><a href="https://film.9yards.co.ug" target="_blank" rel="noopener noreferrer">9Yards Film</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -727,7 +727,7 @@
                                         </div>
                                         <div class="dgm-footer-widget-input p-relative">
                                             <form action="#">
-                                                <input type="text" placeholder="Enter your email">
+                                                <input type="email" placeholder="Enter your email" required>
                                                 <span class="input-icon">
                                                     <svg width="17" height="14" viewBox="0 0 17 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                         <path d="M16 2.5C16 1.675 15.325 1 14.5 1H2.5C1.675 1 1 1.675 1 2.5M16 2.5V11.5C16 12.325 15.325 13 14.5 13H2.5C1.675 13 1 12.325 1 11.5V2.5M16 2.5L8.5 7.74998L1 2.5" stroke="#A1A4AA" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
