Remove offcanvas gallery section and add contact form support area for enhanced user engagement

--- a/index.html
+++ b/index.html
@@ -101,31 +101,6 @@
                     </nav>
                 </div>
 
-                <!-- <div class="tp-offcanvas-gallery d-none d-xl-block">
-                    <div class="row gx-2">
-                        <div class="col-md-3 col-3">
-                            <div class="tp-offcanvas-gallery-img fix">
-                                <a href="https://contenthouse.9yards.co.ug/"><img src="assets/img/9Yards/Logos/9Yards Content House Logo/9Yards-Content-House-Coloured-Logo.jpg" alt="9Yards Content House Logo"></a>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-3">
-                            <div class="tp-offcanvas-gallery-img fix">
-                                <a href="https://food.9yards.co.ug/"><img src="assets/img/9Yards/Logos/9Yards Food Logos/9Yards-Food-Coloured-Logo.png" alt="9Yards Food Logo"></a>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-3">
-                            <div class="tp-offcanvas-gallery-img fix">
-                                <a class="popup-image" href="https://film.9yards.co.ug/"><img src="assets/img/9Yards/Logos/9Yards Film Logos/2D/9Yards-Film-2D-Logo.jpg" alt="9Yards Film Logo"></a>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-3">
-                            <div class="tp-offcanvas-gallery-img fix">
-                                <a class="popup-image" href="assets/img/offcanvas/offcanvas-4.jpg"><img src="assets/img/offcanvas/offcanvas-4.jpg" alt=""></a>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
-
                 <div class="tp-offcanvas-contact">
                     <h3 class="tp-offcanvas-title sm">Let's Talk</h3>
                     <ul>
@@ -644,6 +619,22 @@
                     </div>
                 </div>
                 <!-- hero area end -->
+
+                <!-- about area start -->
+                <div class="cn-contactform-support-area mb-140">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-xl-10">
+                                <div class="cn-contactform-support-bg d-flex align-items-center justify-content-center" data-background="assets/img/contact/contact-us/contact-us-shape.png">
+                                    <div class="cn-contactform-support-text text-center">
+                                        <span>Let's turn your vision into reality. Cinematic storytelling, iconic branding, world-class execution.</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- about area end -->
 
             </main>
 
