--- a/about.html
+++ b/about.html
@@ -401,7 +401,7 @@
                         <div class="tp-portfolio-tab-content-wrap">
                             <div class="tab-content" id="nav-tabContent">
                                 <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
-                                    <div class="row">
+                                    <div class="row justify-content-center">
                                         <div class="col-lg-4 col-md-6">
                                             <div class="tp-portfolio-inner-item mb-65">
                                                 <div class="tp-portfolio-inner-content">
