Revise portfolio section to emphasize core principles: Innovation, Quality, and Authenticity

--- a/about.html
+++ b/about.html
@@ -369,22 +369,19 @@
                             <div class="col-xl-12">
                                 <div class="tp-portfolio-inner-box pb-100">
                                     <div class="tp-portfolio-heading pb-30 d-flex p-relative tp_fade_anim">
-                                        <span class="tp-section-subtitle pre orange-color tp_fade_anim mr-95">Portfolio <svg xmlns="http://www.w3.org/2000/svg" width="82" height="9" viewBox="0 0 82 9" fill="none">
+                                        <span class="tp-section-subtitle pre orange-color tp_fade_anim mr-95">What Drives Us <svg xmlns="http://www.w3.org/2000/svg" width="82" height="9" viewBox="0 0 82 9" fill="none">
                                                 <path d="M78 7.95425L81.5 4.47169L78 0.989136M1 3.98977H81V4.98977H1V3.98977Z" stroke="#FF5722" stroke-linecap="round" stroke-linejoin="round" />
                                             </svg>
                                         </span>
 
-                                        <h3 class="tp-blog-title fs-100 tp_fade_anim">We Make <img src="assets/img/about-us/about-us-4/about-us-4-shape-1.png" alt=""> <br> Digital Beautiful</h3>
+                                        <h3 class="tp-blog-title fs-100 tp_fade_anim">Three principles guide <img src="assets/img/about-us/about-us-4/about-us-4-shape-1.png" alt=""> <br> everything we do</h3>
                                     </div>
                                     <div class="tp-portfolio-inner-tab-wrap">
                                         <nav>
                                             <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                                                <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">All Projects</button>
-                                                <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Marketing</button>
-                                                <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Agency</button>
-                                                <button class="nav-link" id="nav-four-tab" data-bs-toggle="tab" data-bs-target="#nav-four" type="button" role="tab" aria-controls="nav-four" aria-selected="false">Branding</button>
-                                                <button class="nav-link" id="nav-five-tab" data-bs-toggle="tab" data-bs-target="#nav-five" type="button" role="tab" aria-controls="nav-five" aria-selected="false">Design</button>
-                                                <button class="nav-link" id="nav-six-tab" data-bs-toggle="tab" data-bs-target="#nav-six" type="button" role="tab" aria-controls="nav-six" aria-selected="false">Development</button>
+                                                <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">INNOVATION</button>
+                                                <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">QUALITY</button>
+                                                <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">AUTHENTICITY</button>
                                             </div>
                                         </nav>
                                     </div>
@@ -405,24 +402,24 @@
                                         <div class="col-lg-4 col-md-6">
                                             <div class="tp-portfolio-inner-item mb-65">
                                                 <div class="tp-portfolio-inner-content">
-                                                    <h4 class="tp-portfolio-inner-title fs-30"><a class="tp-line-white" href="portfolio-details-gallery-light.html">Olivia Rivers</a></h4>
-                                                    <span>Branding - 2025</span>
+                                                    <h4 class="tp-portfolio-inner-title fs-30"><a class="tp-line-white" href="#">Innovation</a></h4>
+                                                    <span>We don't follow trends—we set them. From adopting new production technologies to reimagining what a creative company can be, we constantly push boundaries. Innovation isn't just about tools; it's about thinking differently and solving problems in ways others haven't considered.</span>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-lg-4 col-md-6">
                                             <div class="tp-portfolio-inner-item mb-65">
                                                 <div class="tp-portfolio-inner-content">
-                                                    <h4 class="tp-portfolio-inner-title fs-30"><a class="tp-line-white" href="portfolio-details-gallery-light.html">Corporate Branding</a></h4>
-                                                    <span>Agency - 2025</span>
+                                                    <h4 class="tp-portfolio-inner-title fs-30"><a class="tp-line-white" href="#">Quality</a></h4>
+                                                    <span>International standards, local expertise. Every design, every video, every meal, every project—we refuse to compromise. Quality isn't expensive; it's an investment. We'd rather say no to a project than deliver something we're not proud of.</span>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-lg-4 col-md-6">
                                             <div class="tp-portfolio-inner-item mb-65">
                                                 <div class="tp-portfolio-inner-content">
-                                                    <h4 class="tp-portfolio-inner-title fs-30"><a class="tp-line-white" href="portfolio-details-gallery-light.html">Mobile app</a></h4>
-                                                    <span>Agency - 2025</span>
+                                                    <h4 class="tp-portfolio-inner-title fs-30"><a class="tp-line-white" href="#">Authenticity</a></h4>
+                                                    <span>Proudly Ugandan. We celebrate our culture, support local talent, and tell authentic stories. We're not trying to be something we're not. Our strength comes from understanding this market deeply while competing on the global stage. Real recognizes real.</span>
                                                 </div>
                                             </div>
                                         </div>
