Revise About Us section to enhance messaging and clarity around core principles

--- a/about.html
+++ b/about.html
@@ -369,12 +369,12 @@
                             <div class="col-xl-12">
                                 <div class="tp-portfolio-inner-box pb-100">
                                     <div class="tp-portfolio-heading pb-30 d-flex p-relative tp_fade_anim">
-                                        <span class="tp-section-subtitle pre orange-color tp_fade_anim mr-95">What Drives Us <svg xmlns="http://www.w3.org/2000/svg" width="82" height="9" viewBox="0 0 82 9" fill="none">
+                                        <span class="tp-section-subtitle pre orange-color tp_fade_anim mr-95">THE PHILOSOPHY <svg xmlns="http://www.w3.org/2000/svg" width="82" height="9" viewBox="0 0 82 9" fill="none">
                                                 <path d="M78 7.95425L81.5 4.47169L78 0.989136M1 3.98977H81V4.98977H1V3.98977Z" stroke="#FF5722" stroke-linecap="round" stroke-linejoin="round" />
                                             </svg>
                                         </span>
 
-                                        <h3 class="tp-blog-title fs-100 tp_fade_anim">Three principles guide <img src="assets/img/about-us/about-us-4/about-us-4-shape-1.png" alt=""> <br> everything we do</h3>
+                                        <h3 class="tp-blog-title fs-100 tp_fade_anim">Principles Built for the <img src="assets/img/about-us/about-us-4/about-us-4-shape-1.png" alt=""> <br> Global Stage.</h3>
                                     </div>
                                     <div class="tp-portfolio-inner-tab-wrap">
                                         <nav>
@@ -403,7 +403,7 @@
                                             <div class="tp-portfolio-inner-item mb-65">
                                                 <div class="tp-portfolio-inner-content">
                                                     <h4 class="tp-portfolio-inner-title fs-30"><a class="tp-line-white" href="#">Innovation</a></h4>
-                                                    <span>We don't follow trends—we set them. From adopting new production technologies to reimagining what a creative company can be, we constantly push boundaries. Innovation isn't just about tools; it's about thinking differently and solving problems in ways others haven't considered.</span>
+                                                    <span>We don’t just follow trends, we define them. By merging cutting-edge production technology with disruptive thinking, we reimagine the boundaries of creative possibility. For us, innovation is more than a tool; it’s the relentless pursuit of solutions that haven't been imagined yet.</span>
                                                 </div>
                                             </div>
                                         </div>
@@ -411,7 +411,7 @@
                                             <div class="tp-portfolio-inner-item mb-65">
                                                 <div class="tp-portfolio-inner-content">
                                                     <h4 class="tp-portfolio-inner-title fs-30"><a class="tp-line-white" href="#">Quality</a></h4>
-                                                    <span>International standards, local expertise. Every design, every video, every meal, every project—we refuse to compromise. Quality isn't expensive; it's an investment. We'd rather say no to a project than deliver something we're not proud of.</span>
+                                                    <span>International benchmarks, local soul. From cinematic frames to culinary perfection, our standard is non-negotiable. Quality is never a cost; it is our signature investment. If a project doesn't meet our definition of excellence, it doesn't leave our doors.</span>
                                                 </div>
                                             </div>
                                         </div>
@@ -419,7 +419,7 @@
                                             <div class="tp-portfolio-inner-item mb-65">
                                                 <div class="tp-portfolio-inner-content">
                                                     <h4 class="tp-portfolio-inner-title fs-30"><a class="tp-line-white" href="#">Authenticity</a></h4>
-                                                    <span>Proudly Ugandan. We celebrate our culture, support local talent, and tell authentic stories. We're not trying to be something we're not. Our strength comes from understanding this market deeply while competing on the global stage. Real recognizes real.</span>
+                                                    <span>Unapologetically Ugandan. We champion our heritage and amplify local talent to tell stories that resonate across borders. We succeed by remaining true to our cultural pulse while outperforming on the world stage. Real recognizes real.</span>
                                                 </div>
                                             </div>
                                         </div>
