Refactor postbox section and adjust breadcrumb padding for improved layout

--- a/about.html
+++ b/about.html
@@ -315,7 +315,7 @@
                 </div>
                 <!-- hero area end -->
             
-                <section id="postbox" class="postbox-area tp-blog-details-ptb pb-80">
+                <section id="postbox" class="postbox-area tp-blog-details-ptb">
                     <div class="container container-1750">
                         <div class="tp-blog-details-banner fix mb-100">
                             <img data-speed=".8" src="assets/img/9Yards/Videos/about-hero-9-yards.jpg" alt="">
@@ -363,7 +363,7 @@
                 </section>
 
                 <!-- breadcurmb area start -->
-                <div class="tp-breadcrumb-area tp-breadcrumb-ptb" data-background="assets/img/blog/blog-masonry/blog-bradcum-bg.png">
+                <div class="tp-breadcrumb-area tp-breadcrumb-ptb" data-background="assets/img/blog/blog-masonry/blog-bradcum-bg.png" style="padding-top: 20px;">
                     <div class="container container-1430">
                         <div class="row justify-content-center">
                             <div class="col-xl-12">
