Revise testimonial section to highlight unique selling points and enhance client engagement

--- a/about.html
+++ b/about.html
@@ -437,8 +437,8 @@
                         <div class="row align-items-center">
                             <div class="col-xl-3 col-lg-4">
                                 <div class="creative-testimonial-title-box mb-25">
-                                    <span class="tp-section-subtitle mb-20 fs-17 pre-circle tp_fade_anim" data-delay=".3">Testimonials</span>
-                                    <h4 class="tp-section-title fs-44 tp_fade_anim" data-delay=".5">What our <br> happy clients <br> say about us.</h4>
+                                    <span class="tp-section-subtitle mb-20 fs-17 pre-circle tp_fade_anim" data-delay=".3">Why Choose 9Yards</span>
+                                    <h4 class="tp-section-title fs-44 tp_fade_anim" data-delay=".5">Six reasons we're different from everyone else</h4>
                                 </div>
                                 <div class="creative-testimonial-btn mb-55 tp_fade_anim" data-delay=".7" data-fade-from="top" data-ease="bounce">
                                     <a href="contact.html" class="tp-btn-black btn-green-light-bg pr-15">
@@ -453,14 +453,6 @@
                                                     </filter>
                                                 </defs>
                                             </svg>
-                                        </span>
-                                        <span class="tp-btn-black-filter d-inline-flex align-items-center" style="filter: url(#buttonFilter6)">
-                                            <span class="tp-btn-black-text">Let’s chat</span>
-                                            <span class="tp-btn-black-circle">
-                                                <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                    <path d="M1 9L9 1M9 1H1M9 1V9" stroke="currentcolor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                                </svg>
-                                            </span>
                                         </span>
                                     </a>
                                 </div>
