--- a/contact.html
+++ b/contact.html
@@ -328,13 +328,7 @@
                                                     <rect x="6.25781" width="1.5" height="21" fill="#000" />
                                                     <path d="M14.1641 13.6257C10.28 13.6257 7.13714 16.9239 7.13714 21" stroke="#000" stroke-width="1.5" stroke-miterlimit="10" />
                                                     <path d="M7.13672 21C7.13672 16.9239 3.99384 13.6257 0.109797 13.6257" stroke="#000" stroke-width="1.5" stroke-miterlimit="10" />
-                                                </svg> Scroll to explore</p>
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="tp-contact-us-text d-none d-md-block text-md-end">
-                                        <p>See in Map our Office</p>
+                                                </svg> Scroll to start the conversation
                                     </div>
                                 </div>
                             </div>
@@ -345,55 +339,39 @@
 
                 <!-- contact us form area start -->
                 <div id="down" class="tp-contact-us-form-ptb pt-60 pb-120">
-                    <div class="container container-1750">
-                        <div class="tp-contact-us-form-wrapper">
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <div class="tp-contact-us-map p-relative">
-                                        <div class="tp-contact-map-icon-box">
-                                            <div class="tp-contact-map-icon">
-                                                <span><img src="assets/img/contact/map-icon.svg" alt=""></span>
-                                            </div>
-                                        </div>
-                                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193596.26002818075!2d-74.1443121872927!3d40.69728463485858!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sbd!4v1745055504744!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
+                    <div class="container container-1230">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-10">
+                                <div class="tp-contact-us-form-wrapper">
                                     <div class="tp-contact-us-wrap">
-                                        <h4 class="tp-contact-us-title mb-55">Send a Message</h4>
+                                        <h4 class="tp-contact-us-title mb-55 text-center">Send a Message</h4>
                                         <form id="contact-form" action="assets/mail.php" method="POST">
                                             <div class="row">
                                                 <div class="col-lg-6">
                                                     <div class="tp-contact-form-input mb-20">
-                                                        <label>Full name*</label>
-                                                        <input name="name" type="text">
+                                                        <label for="name">Full name*</label>
+                                                        <input id="name" name="name" type="text" required>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-6">
                                                     <div class="tp-contact-form-input mb-20">
-                                                        <label>Email address*</label>
-                                                        <input name="email" type="email">
+                                                        <label for="email">Email address*</label>
+                                                        <input id="email" name="email" type="email" required>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-12">
                                                     <div class="tp-contact-form-input mb-20">
-                                                        <label>Website link</label>
-                                                        <input name="subject" type="text">
+                                                        <label for="message">How Can We Help You*</label>
+                                                        <textarea id="message" name="message" required></textarea>
                                                     </div>
-                                                </div>
-                                                <div class="col-lg-12">
-                                                    <div class="tp-contact-form-input mb-20">
-                                                        <label>How Can We Help You*
-                                                        </label>
-                                                        <textarea name="message"></textarea>
-                                                    </div>
-                                                    <div class="tp-contact-form-btn">
-                                                        <button class="w-100" type="submit"><span>
+                                                    <div class="tp-contact-btn text-center">
+                                                        <button type="submit" class="tp-btn-yellow-green border-0" style="padding-left: 75px; padding-right: 75px;">
+                                                            <span>
                                                                 <span class="text-1">Send Message</span>
                                                                 <span class="text-2">Send Message</span>
                                                             </span>
                                                         </button>
-                                                        <p class="ajax-response mt-5"></p>
+                                                        <p class="ajax-response mt-5 text-center"></p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -405,99 +383,6 @@
                     </div>
                 </div>
                 <!-- contact us form area end -->
-
-                <!-- about area start -->
-                <div class="cn-contactform-support-area mb-140">
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-xl-10">
-                                <div class="cn-contactform-support-bg d-flex align-items-center justify-content-center" data-background="assets/img/contact/contact-us/contact-us-shape.png">
-                                    <div class="cn-contactform-support-text text-center">
-                                        <span>Or, you can contact one of our studios
-                                            directly below. We aim to respond
-                                            within 24 hours.</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- about area end -->
-
-                <!-- contact area start -->
-                <div class="tp-contact-us-info-area pb-120">
-                    <div class="container container-1230">
-                        <div class="row">
-                            <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
-                                <div class="tp-contact-us-content text-center" data-speed="1.2">
-                                    <div class="tp-contact-us-thumb d-flex justify-content-center">
-                                        <img src="assets/img/contact/contact-us/contact-us-thumb-1.jpg" alt="">
-                                    </div>
-                                    <div class="tp-contact-us-bottom">
-                                        <div class="tp-contact-us-info-details">
-                                            <h4 class="tp-contact-us-info-title">San Francisco</h4>
-                                            <a href="mailto:sydney@contact.com">sydney@contact.com</a>
-                                            <a href="tel:(+91)76001726">(+91) 76001726</a>
-                                        </div>
-                                        <div class="tp-contact-us-btn">
-                                            <a class="tp-btn-yellow-green w-100" target="_blank" href="https://www.google.com/maps">
-                                                <span>
-                                                    <span class="text-1">View Location</span>
-                                                    <span class="text-2">View Location</span>
-                                                </span>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
-                                <div class="tp-contact-us-content text-center mt-60" data-speed=".9">
-                                    <div class="tp-contact-us-thumb d-flex justify-content-center">
-                                        <img src="assets/img/contact/contact-location-2.jpg" alt="">
-                                    </div>
-                                    <div class="tp-contact-us-bottom">
-                                        <div class="tp-contact-us-info-details">
-                                            <h4 class="tp-contact-us-info-title">Germany</h4>
-                                            <a href="mailto:sydney@contact.com">sydney@contact.com</a>
-                                            <a href="tel:(+91)76001726">(+91) 76001726</a>
-                                        </div>
-                                        <div class="tp-contact-us-btn">
-                                            <a class="tp-btn-yellow-green active w-100" target="_blank" href="https://www.google.com/maps">
-                                                <span>
-                                                    <span class="text-1">View Location</span>
-                                                    <span class="text-2">View Location</span>
-                                                </span>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
-                                <div class="tp-contact-us-content text-center" data-speed="1.2">
-                                    <div class="tp-contact-us-thumb d-flex justify-content-center">
-                                        <img src="assets/img/contact/contact-location-3.jpg" alt="">
-                                    </div>
-                                    <div class="tp-contact-us-bottom">
-                                        <div class="tp-contact-us-info-details">
-                                            <h4 class="tp-contact-us-info-title">New Zealand</h4>
-                                            <a href="mailto:sydney@contact.com">sydney@contact.com</a>
-                                            <a href="tel:(+91)76001726">(+91) 76001726</a>
-                                        </div>
-                                        <div class="tp-contact-us-btn">
-                                            <a class="tp-btn-yellow-green w-100" target="_blank" href="https://www.google.com/maps">
-                                                <span>
-                                                    <span class="text-1">View Location</span>
-                                                    <span class="text-2">View Location</span>
-                                                </span>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- contact area end -->
 
             </main>
 
